--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Magna</h2>
+									<a href="http://stage.sunongyun.app.hlwjgxt.znxdcloud.com">
+										<h2>互联网+监管-APP</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
