--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 					<ul class="icons">
 						<li><a href="html/home.html" class="fa-home">首页</a></li>
 						<!-- <li><a href="https://wpa.qq.com/msgrd?v=3&amp;uin=1515953003&amp;site=qq&amp;menu=yes" class="fa-qq">QQ</a></li> -->
-						<li><a href="tencent://message/?uin=506713289&Site=在线QQ&Menu=yes" class="fa-qq">QQ</a></li>
+						<li><a href="tencent://message/?uin=506713289&Site=在线QQ&Menu=yes" class="fa-qq"> <img border="0" src="http://wpa.qq.com/pa?p=2:351218741:41">QQ</a></li>
 						<li><a href="http://ys1.xymb.xyz" class="fa-youtube-play">影视</a></li>
 					</ul>
 				</footer>
