--- a/index.html
+++ b/index.html
@@ -284,8 +284,10 @@
 				document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
 			}
 		</script>
+		
 		<script src="./js/jquery.min.js"></script>
-		<script src="./js/su.js"></script>
+		<!-- 枫叶特效，wpSuperSnow -->
+		<!-- <script src="./js/su.js"></script>
 		<script type="text/javascript">
 			jQuery(document).ready(function($) {
 				$('body').wpSuperSnow({
@@ -299,6 +301,18 @@
 					useFlakeTrans: false
 				});
 			});
-		</script>
+		</script> -->
+
+		<!-- 飘雪特效，snow-container-->
+		<!-- <script src="http://www.lmlblog.com/winter/templets/xq/js/snowy.js"></script>
+		<script src="http://www.lmlblog.com/blog/12/js/Snow.js"></script> -->
+		<script src="js/snowy.js"></script>
+		<script src="js/Snow.js"></script>
+		<style type="text/css">
+			.snow-container{position:fixed;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:100001;}
+		</style>
+		<div class="snow-container">
+			
+		</div>
 	</body>
 </html>
