登录模块置顶z-index

--- a/html/home.html
+++ b/html/home.html
@@ -20,8 +20,8 @@
 		<nav class="blog-nav layui-header">
 			<div class="blog-container">
 				<!--登录按钮-->
-				<div id="login" style="position: absolute; right: 20px; top: 22px;">
-					<a href="" target="_blank" style="color: rgb(194,194,194);font-size: 15px; "><img src="../img/login.png" style="height: 30px "></a>
+				<div id="login" class="layui-top" style="position: absolute; right: 20px; top: 22px;z-index: 1999;">
+					<a href="register.html" target="_blank" style="color: rgb(194,194,194);font-size: 15px; "><img src="../img/login.png" style="height: 30px "></a>
 				</div>
 				<div id="logo">
 					<a href="home.html"><img src="../img/logo.png" id="imlogo" href="home.html" style="height: 55px; padding-top: 3px;"></a>
@@ -45,8 +45,8 @@
 					</li>
 				</ul>
 				<!-- <div id="login" style="position: absolute; right: 20px; top: 20px;">
-				<a href="register.html" target="_blank" style="color: rgb(174,194,161);font-size: 17px; ">登陆&nbsp;|&nbsp;注册</a>
-			</div> -->
+					<a href="register.html" target="_blank" style="color: rgb(174,194,161);font-size: 17px; ">登陆&nbsp;|&nbsp;注册</a>
+				</div> -->
 				<!-- 手机和平板的导航开关 -->
 				<a class="blog-navicon" href="javascript:;">
 					<i class="fa fa-navicon"></i>
